styles/style.css
/* ===========================
   RESET & BASE STYLES
   =========================== */

html {
  font-size: 18px;
  /*make background navy, text very faint blue*/
  background-color: #091326;
  color: #D3E2FF;
  font-family: "EB Garamond", serif;
  line-height: 1.5;
  letter-spacing: 0.8px;
}

.site_wrapper {
  max-width: 50rem;
  margin: 0 auto;
  padding: 0.6rem 0.6rem;
}

p {
  margin: 0.5rem 0;
}


/* ===========================
   SECTIONS
   =========================== */

.top_wrapper {
  display: flex;
  width: 100%;
  align-items: center;
}

.headshot {
  max-width: 8rem;
  min-width: 5rem;
  align-items: center;
}

.top_wrapper img {
  width: 100%;
  margin-right: 10%;
}

.about {
  margin: 0 5%;
  flex-direction: column; /* make content inside .about also a flexbox */
  justify-content: center;   /* centers content vertically */
}

h1 {
  font-size: 30px;
  font-family: "EB Garamond", serif;
  font-weight: 700, bold;
  margin: 0 0 0.5rem 0;
  padding: 0;
}

h2 {
  font-family: "Source Code Pro", monospace;
  font-size: 20px;
  font-weight: 350;
  letter-spacing: 1.6px;
  color: #83DDF2;
  text-transform: uppercase;
  margin: 0;
}

.projects, .writing {
  border-top: 1px solid;
  border-color: #1d6373;
  margin: 1.1rem 0;
  padding: 1rem 0 0.5rem 0;
}

.colophon {
  margin: 1rem, 0;
  font-size: 15px; 
  font-family: "Source Code Pro", monospace;
  text-align: center; 
  color: #1d6373;
}


/* ===========================
   WRITING
   =========================== */

dl {
  padding-left: 0;
}

dt {
  font-weight: 600;
  font-size: 19px;
  margin-top: 0.8rem;
}

dd {
  margin-left: 1.5rem;
}

dd.byline {
  font-family: 'Source Code Pro', monospace;
  font-size: 14px;
  padding-left: 1rem;
  letter-spacing: 0.5px;
  margin-top: 0.2rem;
}

dd.description {
 margin-top: 0.3rem;
}

dd.links {
  font-family: 'Source Code Pro', monospace;
  font-size: 15px;
  color: #83DDF2;
  margin-top: 0.3rem;

}

/* ===========================
   CONTACT
   =========================== */

a {
  color: #83DDF2;
}

a:active {
  background: #6900ff;
  color:  #83DDF2;
}

a:visited {
  color: #8039c2;
}

.contact {
  font-family: "Source Code Pro", monospace;
  font-size: 15px;
  line-height: 25px;
}

/* ====== CV, LINKEDIN LINKS ====== */

.contact a {
  outline-color: transparent;
  text-transform: lowercase;
  text-underline-offset: 5px;
}

.contact a:visited {
  color: #8039c2;
}

.contact a:focus, 
.contact a:hover {
  text-decoration: none;
  background: #83DDF2;
  color: #091326;
}

.contact a:active {
  text-decoration: none;
  background: #6900ff;
  color:  #83DDF2;
}

/* ====== COLOPHON ====== */

.colophon a:link {
  color: #1d6373;
}

.colophon a:active {
  text-decoration: none;
  background: #6900ff;
  color:  #83DDF2;
}

/* ====== EMAIL ====== */

#email:link,
#email:visited {
  color: #D3E2FF;
}

#email:focus, 
#email:hover {
  text-decoration: none;
  background: #D3E2FF;
  color: #091326;
}

#email:active {
  text-decoration: none;
  background: #6900ff;
  color:  #D3E2FF;
}

